# scpcb-vita

.github/workflows/: build-vita-vpk.yml  symbolicate.yml
vita/: AUDIT.md  CHECKLIST.md  CMakeLists.txt  PORTING.md  README.md
vita/src/: input.c  input.h  main.c  sharedfb_compat.c
vita/src/audio/: audio.c  audio.h
vita/src/formats/: b3d.c  b3d.h  reader.h  rmesh.c  rmesh.h  texture.c  texture.h
vita/src/game/: collision.c  collision.h  doors.c  doors.h  item_spawns.h  mapgen.c  mapgen.h  room_cameras.h  room_decals.h  room_doors.h  room_fixtures.h  room_gen_data.h
vita/src/render/: scene.c  scene.h  skin.c  skin.h
vita/src/video/: video.c  video.h
vita/tools/: convert_assets.c  crash_offsets.txt  extract_cameras.py  extract_decals.py  extract_doors.py  extract_fixtures.py  extract_gen_data.c  extract_items.py  host_syntax_check.sh  validate_assets.c
